# CandidateMatcher

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  Dockerfile_ollama  README.md  compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
candidate/: __init__.py  __main__.py  llm_match.py  logging_config.py  module_nlp.py  server.py  utils.py
data/: example.json  vacancies.json
docs/: candidate.rst  index.rst  modules.rst
