[project]
name = "candidate_matcher"
version = "0.1.0"
description = "Project for the hackathon"
authors = [
    {name = "Timur Komolov",email = "komolov.timurka@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.75.0,<2.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "docx (>=0.2.4,<0.3.0)",
    "yake (>=0.4.8,<0.5.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
